# tallynest

./: Cargo.toml  README.md
scripts/: package-windows.ps1
src/: crypto.rs  data.rs  io.rs  main.rs  print_html.rs  theme.rs
