[package]
name = "cofferly"
version = "0.1.0"
edition = "2021"
description = "Cofferly - a simple local allowance wallet for kids."
license = "MIT"
repository = "https://github.com/danielendara/cofferly"

[[bin]]
name = "Cofferly"
path = "src/main.rs"

[dependencies]
argon2 = "0.5"
chacha20poly1305 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
eframe = "0.34"
egui_extras = "0.34"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
opener = "0.8"
rand = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"

[profile.release]
opt-level = 2
lto = true
codegen-units = 1

